fixed x-overflow

--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -30,6 +30,7 @@ html {
     width: 100vw;
     height: 100%;
     font-size: calc(15px + 0.390625vw);
+    overflow-x: hidden;
 }
 
 body {
@@ -469,6 +470,7 @@ nav .navbar .nav-links .links .branch-nguyen-trai .branch-nguyen-trai-sub-menu{
     width: 100vw;
     height: 100vh;
     position: relative;
+
 }
 
 
@@ -512,6 +514,7 @@ nav .navbar .nav-links .links .branch-nguyen-trai .branch-nguyen-trai-sub-menu{
 }
 
 .main-slide .item .slide-movie-text .movie-name {
+    text-transform: capitalize;
     margin-bottom: 4%;
 }
 
@@ -863,6 +866,7 @@ nav .navbar .nav-links .links .branch-nguyen-trai .branch-nguyen-trai-sub-menu{
 }
 
 .main .movie-list  .movie-card .card a .movie-name {
+    text-transform: capitalize;
     font-size: 1.1rem;
     font-weight: 500;
     margin-top: 0;
