--- a/dsasd.css
+++ b/dsasd.css
@@ -1,26 +1,56 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 
 .modal-dialog {
     width: 350px;
-    height: 340px;
     border-radius: 15px;
 }
 
 .modal-content {
     width: 350px;
-    height: 340px;
+
     border-radius: 15px;
-    background-color: rgba(19, 19, 19, 0.491);
+    background-color: rgba(41, 41, 41, 0.965);
     position: relative;
     color: white;
+
+}
+
+.modal-content::before {
+    content: "";
+    position: absolute;
+    left: -3px;
+    right: -3px;
+    bottom: -3px;
+    top: -3px;
+    border-radius: 15px;
+    background: linear-gradient(45deg, rgb(68, 0, 255), rgb(255, 0, 162));
+    z-index: -1;
 }
 
 .close-modal {
+    color: white;
+    background-color: transparent;
+    border: none;
     position: absolute;
     top: 5px;
     right: 5px;
     font-size: 15px;
     z-index: 1;
+}
+
+
+.modal-body {
+    overflow: hidden;
+}
+
+.login-form-header {
+    text-align: center;
 }
 
 form {
@@ -29,22 +59,55 @@ form {
     text-align: left;
 }
 
+.email-pass-acc {
+    margin-top: 15px;
+}
+
 label {
     display: block;
     margin-top: 5px;
 }
 
-.forget {
-    margin-top: 5px;
-}
+
 
 label[for="remember"] {
     display: inline-block;
 }    
 
 .input-field {
+    margin-top: 1%;
     width: 100%;
+    height: 30px;
     position: relative;
+    border: 1.5px solid #8b8b8b6d;
+    padding: 1px 5px;
+    border-radius: 10px;
+   /*  border-bottom: 1px solid #ccc; */
+}
+
+.input-field::before {
+    content: "";
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    bottom: 0;
+    
+}
+
+
+.input-field .input-icon {
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.input-field #pass-toggle {
+    font-size: 14px;
+    line-height: 14px;
+    position: absolute;
+    right: 2%;
+    top: 50%;
+    background-color: rgba(41, 41, 41, 0.965);
+    transform: translateY(-50%);
 
 }
 
@@ -52,28 +115,70 @@ label[for="remember"] {
     position: absolute;
     left: 25px;
     right: 0px;
-    height: 100%;
+    top: 0;
+    bottom: 0;
     border: none;
     background-color: rgba(255, 0, 0, 0);
     color: white;
+    font-size: 15px;
+    line-height: 100%px;
 }
 
 #password:focus, #email:focus{
     outline: none;
 }
 
-#password[type="password"] ~ .input-field i.fa-solid.fa-eye {
-    color: red; /* Thay đổi màu sắc tại đây */
+
+#pass-toggle {
+    & .show-tog{
+        display: block;
+    }
+
+    & .hide-tog{
+        display: none;
+    }
 }
 
+#pass-toggle.hide {
+    & .show-tog{
+        display: none;
+    }
+
+    & .hide-tog{
+        display: block;
+    }
+}
+
+
 .remember-and-forget {
+    font-size: 15px;
     display: flex;
     justify-content: space-between;
 }
 
-.submit {
+.forget {
     margin-top: 5px;
+}
+
+.forget a {
+    color: white;
+    text-decoration: none;
+}
+
+.submit {
+    margin-top: 30px;
     text-align: center;
     width: 100%;
+    
 }
+
+#submit {
+    color: white;
+    width: 100%;
+    padding: 3px 0;
+    border-radius: 15px;
+    border: none;
+    background: linear-gradient(50deg, rgb(100, 44, 255), rgb(255, 63, 185));
+}
+
 
